deployments/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiservice
  namespace: food-delivery-nmsp
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: apiservice
  replicas: 1
  template:
    metadata:
      labels:
        name: apiservice
    spec:
      containers:
        - image: us.icr.io/vpc-demo-alex/api:3
          name: apiservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: apiservice
  namespace: food-delivery-nmsp
  labels:
    razee/watch-resource: detail
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: apiservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courier
  namespace: food-delivery-nmsp
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: courier
  replicas: 1
  template:
    metadata:
      labels:
        name: courier
    spec:
      containers:
        - image: us.icr.io/vpc-demo-alex/courier:3
          imagePullPolicy: Always
          name: courier
          volumeMounts:
            - name: icd-cert
              mountPath: /home/node/app/icd.pem
              subPath: icd.pem
              readOnly: true
      volumes:
        - name: icd-cert
          secret:
            secretName: icd-cert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen
  namespace: food-delivery-nmsp
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: kitchen
  replicas: 1
  template:
    metadata:
      labels:
        name: kitchen
    spec:
      containers:
        - name: kitchen
          image: us.icr.io/vpc-demo-alex/kitchen:3
          imagePullPolicy: Always
          volumeMounts:
            - name: icd-cert
              mountPath: /home/node/app/icd.pem
              subPath: icd.pem
              readOnly: true
      volumes:
        - name: icd-cert
          secret:
            secretName: icd-cert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: food-delivery-nmsp
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: orders
  replicas: 1
  template:
    metadata:
      labels:
        name: orders
    spec:
      containers:
        - image: us.icr.io/vpc-demo-alex/order:3
          imagePullPolicy: Always
          name: orders
          volumeMounts:
            - name: icd-cert
              mountPath: /home/node/app/icd.pem
              subPath: icd.pem
              readOnly: true
      volumes:
        - name: icd-cert
          secret:
            secretName: icd-cert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podconsumerdata
  namespace: food-delivery-nmsp
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: podconsumerdata
  replicas: 1
  template:
    metadata:
      labels:
        name: podconsumerdata
    spec:
      serviceAccountName: default
      imagePullSecrets:
        - name: all-icr-io
      containers:
        - image: us.icr.io/vpc-demo-alex/consumerdata:3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          name: podconsumerdata
---
apiVersion: v1
kind: Service
metadata:
  name: podconsumerdata
  namespace: food-delivery-nmsp
  labels:
    razee/watch-resource: detail
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: podconsumerdata
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtimedata
  namespace: food-delivery-nmsp
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: realtimedata
  replicas: 1
  template:
    metadata:
      labels:
        name: realtimedata
    spec:
      imagePullSecrets:
        - name: all-icr-io
      containers:
        - image: us.icr.io/vpc-demo-alex/realtimedata:3
          imagePullPolicy: Always
          name: realtimedata
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: realtimedata
  namespace: food-delivery-nmsp
  labels:
    razee/watch-resource: detail
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: realtimedata
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status
  namespace: food-delivery-nmsp
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: status
  replicas: 1
  template:
    metadata:
      labels:
        name: status
    spec:
      containers:
        - image: us.icr.io/vpc-demo-alex/status:3
          imagePullPolicy: Always
          name: status
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: status
  namespace: food-delivery-nmsp
  labels:
    razee/watch-resource: detail
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: status
